--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:JkLrQ7zrIA8wTO576qwb3cHtzBdHgwzeYVJO1XMdsgg=
+APP_KEY=base64:MLStwH+SCXPRkd/FgFlm3PWKtLhY3oUyNyvjIUgC4C8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel2
 DB_USERNAME=root
-DB_PASSWORD=des123
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
